--- a/css/sass/n2g_expresso_mobile.scss
+++ b/css/sass/n2g_expresso_mobile.scss
@@ -400,6 +400,10 @@ body {
   #mentions_legales {
   	font-size: 3.2vw;
     color: #666666;
+
+    a {
+      color: #666666;
+    }
   }
 
   #mentions_legales h3 {
