--- a/css/sass/n2g_expresso_mobile.scss
+++ b/css/sass/n2g_expresso_mobile.scss
@@ -131,7 +131,7 @@ body {
   background: url('../img/n2g_theme_mobile.jpg') no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  height: 110vw;
+  height: 116vw;
   padding: 0;
 
   #bandeau{
@@ -207,24 +207,21 @@ body {
         margin:auto;
         width: 70%;
         position: relative;
-        left:9vw;
         margin-top: 1vw;
+        text-align: center;
 
         div{
-          display: inline-block;
-          vertical-align: top;
 
           &:first-child{
             font-weight: bold;
-            font-size: 3.5vw;
+            font-size: 5vw;
           }
 
           &:last-child{
             position: relative;
-            top:-1vw;
-            left:2vw;
-            width: 44vw;
-            font-size: 3vw;
+            text-align: center;
+            top:1vw;
+            font-size: 3.5vw;
             line-height: 1.4em;
           }
         }
@@ -256,7 +253,7 @@ body {
         font-size: 4vw;
       }
       strong{
-        font-size: 4.5vw;
+        font-size: 4.8vw;
       }
 
   }
