--- a/css/sass/n2g_expresso_mobile.scss
+++ b/css/sass/n2g_expresso_mobile.scss
@@ -174,6 +174,7 @@ body {
         text-transform: uppercase;
         font-size: 9.5vw;
         line-height: 12vw;
+        color: #202e3a;
 
         strong{
           font-style: italic;
@@ -209,6 +210,7 @@ body {
         position: relative;
         margin-top: 1vw;
         text-align: center;
+        color: #202e3a;
 
         div{
 
